--- a/justify-align-content/index.css
+++ b/justify-align-content/index.css
@@ -5,4 +5,6 @@
     gap: 5px;
     grid-template-columns: repeat(3, 100px);
     grid-template-rows: repeat(2,100px);
+    justify-content: space-around; /* center, space-evenly etc */
+    /*align-content: center;*/
 }
