--- a/justify-align-items/index.css
+++ b/justify-align-items/index.css
@@ -4,6 +4,8 @@
     gap: 3px;
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: 40px auto 40px;
+    /*justify-items: end; stretch is default */
+    /*align-items: stretch;*/
 }
 
 .header{
@@ -16,6 +18,8 @@
 
 .content{
     grid-column: 3 / -1;
+    /*justify-self: center;
+    align-self: end;*/
 }
 
 .footer{
