--- a/article-layout/index.css
+++ b/article-layout/index.css
@@ -1,4 +1,35 @@
 
+article {
+    display: grid;
+    grid-template-columns: 80px 1fr 80px;
+    column-gap: 10px;
+}
+
+article > * {
+    grid-column: 2;
+    min-width: 0;
+}
+
+article > figure {
+    grid-column: 1 / -1;
+    margin: 20px 0;
+}
+
+article > .aside{
+    grid-column: 3;
+    color: #666;
+    font-size: 0.8em;
+}
+
+article > blockquote{
+    grid-column: 1 / -1;
+    margin: 10px 0;
+    color: #666;
+    border-left: 10px solid #eee;
+    padding-left: 10px;
+}
+
+
 
 /* General Styling */
 
