--- a/grid-vs-flexbox/index.css
+++ b/grid-vs-flexbox/index.css
@@ -14,6 +14,11 @@
 
 .header {
     grid-column: span 12;
+    display: flex;
+}
+
+.header > div:nth-child(3) {
+    margin-left: auto;
 }
 
 .menu {
